LOGCXX-82: move logstream operators to separate implementation file